Added sloppiness toggle

--- a/GrafDemo/Base.lproj/MainMenu.xib
+++ b/GrafDemo/Base.lproj/MainMenu.xib
@@ -13,6 +13,7 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate">
             <connections>
+                <outlet property="simpleView" destination="u1E-Hc-7jl" id="A6p-gj-vpj"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
         </customObject>
@@ -678,6 +679,16 @@
                     <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u1E-Hc-7jl" customClass="BNRSimpleView">
                         <rect key="frame" x="20" y="174" width="180" height="166"/>
                     </customView>
+                    <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pdF-5s-L0U">
+                        <rect key="frame" x="78" y="150" width="64" height="18"/>
+                        <buttonCell key="cell" type="check" title="Sloppy" bezelStyle="regularSquare" imagePosition="left" inset="2" id="b0D-HN-u5C">
+                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="toggleSloppy:" target="Voe-Tx-rLC" id="83y-iE-TCf"/>
+                        </connections>
+                    </button>
                 </subviews>
             </view>
         </window>
