--- a/GrafDemo/BNRLinesWindowController.xib
+++ b/GrafDemo/BNRLinesWindowController.xib
@@ -25,7 +25,7 @@
                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="Ztv-v9-t0c" customClass="BNRLinesView">
                         <rect key="frame" x="20" y="20" width="219" height="230"/>
                     </customView>
-                    <box autoresizesSubviews="NO" fixedFrame="YES" title="Box" borderType="line" translatesAutoresizingMaskIntoConstraints="NO" id="UgO-1s-F7z" customClass="BNRCheckboxBox">
+                    <box autoresizesSubviews="NO" fixedFrame="YES" title="Stuffage" borderType="line" translatesAutoresizingMaskIntoConstraints="NO" id="UgO-1s-F7z" customClass="BNRCheckboxBox">
                         <rect key="frame" x="271" y="42" width="135" height="205"/>
                         <view key="contentView">
                             <rect key="frame" x="1" y="1" width="133" height="189"/>
